FInish Pull of the program all are ready.

--- a/ContactBookApp/ContactBookApp.csproj
+++ b/ContactBookApp/ContactBookApp.csproj
@@ -4,6 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon />
+    <Win32Resource />
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +18,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="FrmAddContact.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="FrmQuestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
